--- a/html/clients.html
+++ b/html/clients.html
@@ -62,44 +62,40 @@
         </div>
       </div>
     </header>
-    <div id="reference"> 
+    <div id="clients"> 
             <section id="home_2">
               <div class="main_container last_home_wrapper">
                 <ul class="breadcrumbs d-flex align-items-center gap-2">
                   <li> <a href="/">Главная</a></li>
                   <li><span>></span></li>
-                  <li><span>Справка</span></li>
+                  <li><span>Клиентам</span></li>
                 </ul>
                 <div class="home_wrapper">
                   <div class="home_left">
-                    <div class="title">Что делать после ДТП?</div>
-                    <div class="description">Здесь вы найдете ответы на наиболее часто задаваемые вопросы по всему, что связано с ДТП, автострахованием, возмещение убытков от ДТП, обжалование автоштрафов и прочие вопросы. Раздел дополняется.
+                    <div class="title">Клиентам</div>
+                    <div class="description">Здесь мы собрали для вас всю необходимую информацию по тем или иным вопросам взаимодействия с нами. О том, как оплатить наши услуги, о гарантиях, по документам и прочее.
                     </div>
                   </div>
-                  <div class="home_img"><img src="./images/reference_home_bg.png" alt=""></div>
+                  <div class="home_img"><img src="./images/clients_home_card.png" alt=""></div>
                 </div>
                 <div class="bg_number">
                    50-50-50</div>
               </div>
             </section>
-      <div class="main_container"> 
-        <ul class="links d-flex flex-column">
-          <li> <a href="#">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 Правил ДД, он обязан... </a></li>
-          <li> <a href="#">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия </a></li>
-          <li> <a href="#">Каковы самые распространённые ошибки при оформении ДТП </a></li>
-          <li> <a href="#">Что делать, если вы попали в аварию на арендованном автомобиле </a></li>
-          <li> <a href="#">Что входит в перечень обязанностей аварийного комиссара</a></li>
-        </ul>
-        <div class="main_title">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 <br> Правил ДД, он обязан...</div>
+      <div class="main_container clients_container"> 
+        <div class="main_title">По оплате наших услуг</div>
         <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Каковы самые распространённые ошибки при оформении ДТП</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что делать, если вы попали в аварию на арендованном автомобиле</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что входит в перечень обязанностей аварийного комиссара</div>
-        <div class="main_description last_main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
+        <div class="main_title">По гарантиям</div>
+        <div class="main_description">
+           Как такового понятия Гарантия на оформление документов по ДТП не существует. Они сразу оформляются правильно. Гарантии на ремонт после ДТП предоставляются и регламентируются следюущими нормативными актами:<br><br>Федеральный закон от 25.04.2002 N 40-ФЗ (ред. от 28.12.2022)<br>"Об обязательном страховании гражданской ответственности владельцев транспортных средств" (с изм. и доп., вступ. в силу с 15.07.2023)<br>Минимальный гарантийный срок на работы по восстановительному ремонту поврежденного транспортного средства составляет 6 месяцев, а на кузовные работы и работы, связанные с использованием лакокрасочных материалов, 12 месяцев.<br><br>Постановление Правительства РФ от 11.04.2001 N 290 (ред. от 31.01.2017)<br>"Об утверждении Правил оказания услуг (выполнения работ) по техническому обслуживанию и ремонту автомототранспортных средств"<br>В случае, когда предусмотренный договором гарантийный срок составляет менее 2 лет и недостатки оказанной услуги (выполненной работы) обнаружены потребителем по истечении гарантийного срока, но в пределах двух лет, потребитель вправе предъявить требования, предусмотренные пунктом 40 настоящих Правил, если докажет, что такие недостатки возникли до принятия им результата оказанной услуги (выполненной работы) или по причинам, возникшим до этого момента.</div>
+        <div class="main_title">По документам</div>
+        <div class="main_description">
+           Как такового понятия Гарантия на оформление документов по ДТП не существует. Они сразу оформляются правильно. Гарантии на ремонт после ДТП предоставляются и регламентируются следюущими нормативными актами:</div>
+        <div class="main_title">Куда пожаловаться?</div>
+        <div class="main_description">
+           Сожалеем, что в этом возникла необходимость. Cообщить о неточностях в оказании услуг можно на любой стадии, написав на почту <a href="#">111@111.ru</a></div>
+        <div class="main_title">Согласие на обработку ПД</div>
+        <div class="main_description last_description">1111111</div>
       </div>
     </div>
     <footer class="footer"> 
