--- a/html/contact.html
+++ b/html/contact.html
@@ -62,44 +62,56 @@
         </div>
       </div>
     </header>
-    <div id="reference"> 
+    <div id="contact"> 
             <section id="home_2">
-              <div class="main_container last_home_wrapper">
+              <div class="main_container contact_home_wrapper">
                 <ul class="breadcrumbs d-flex align-items-center gap-2">
                   <li> <a href="/">Главная</a></li>
                   <li><span>></span></li>
-                  <li><span>Справка</span></li>
+                  <li><span>Контакты</span></li>
                 </ul>
                 <div class="home_wrapper">
                   <div class="home_left">
-                    <div class="title">Что делать после ДТП?</div>
-                    <div class="description">Здесь вы найдете ответы на наиболее часто задаваемые вопросы по всему, что связано с ДТП, автострахованием, возмещение убытков от ДТП, обжалование автоштрафов и прочие вопросы. Раздел дополняется.
+                    <div class="title">Контакты</div>
+                    <div class="description">Диспетчер +7 (4012) 50-50-50<br/>                    Время работы: Ежедневно, круглосуточно.<br/>                    Офис в Калининграде куда можно приехать: ул. Менделеева, 61Б, корп. 2<br/>                    Email:&nbsp;<a href="info@avariinyi-komissar.ru">info@avariinyi-komissar.ru</a>
                     </div>
                   </div>
-                  <div class="home_img"><img src="./images/reference_home_bg.png" alt=""></div>
+                  <div class="home_img"><img src="./images/contact_home_bg.png" alt=""></div>
                 </div>
                 <div class="bg_number">
                    50-50-50</div>
               </div>
             </section>
       <div class="main_container"> 
-        <ul class="links d-flex flex-column">
-          <li> <a href="#">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 Правил ДД, он обязан... </a></li>
-          <li> <a href="#">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия </a></li>
-          <li> <a href="#">Каковы самые распространённые ошибки при оформении ДТП </a></li>
-          <li> <a href="#">Что делать, если вы попали в аварию на арендованном автомобиле </a></li>
-          <li> <a href="#">Что входит в перечень обязанностей аварийного комиссара</a></li>
-        </ul>
-        <div class="main_title">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 <br> Правил ДД, он обязан...</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Каковы самые распространённые ошибки при оформении ДТП</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что делать, если вы попали в аварию на арендованном автомобиле</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что входит в перечень обязанностей аварийного комиссара</div>
-        <div class="main_description last_main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
+        <div class="address">
+          <div class="title">Адреса всех наших опорных пунктов</div>
+          <div class="address_data d-flex flex-column">
+            <div> 
+              <div class="address_name">БАЗА ЗАПАД (ГЛАВНЫЙ)</div><a class="address_value" href="#">236010, Калининград, ул. Менделеева, 61Б, корп. 2</a>
+            </div>
+            <div> 
+              <div class="address_name">БАЗА СЕВЕР</div><a class="address_value" href="#">1 236001, Калининград, ул. Горького, 170</a>
+            </div>
+            <div> 
+              <div class="address_name">БАЗА СЕВЕР 2</div><a class="address_value" href="#">236041, Калининград, ул. Потемкина, 1</a>
+            </div>
+            <div> 
+              <div class="address_name">БАЗА ВОСТОК</div><a class="address_value" href="#">238311, Калининград, ул. Рихарда Зорге, 1</a>
+            </div>
+            <div> 
+              <div class="address_name">БАЗА ЦЕНТР </div><a class="address_value" href="#">236039, Калининград, пер. Малый, 25</a>
+            </div>
+            <div> 
+              <div class="address_name">БАЗА ЮГ 1 </div><a class="address_value" href="#">236005, Калининград, ул. Киевская, 50</a>
+            </div>
+            <div> 
+              <div class="address_name">БАЗА ЮГ 2</div><a class="address_value" href="#">236005, Калининград, ул. Типографская, 18</a>
+            </div>
+          </div>
+        </div>
+        <div class="map"> 
+          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad618b1f7abaedcc9929575bd2c46365aedcc8769e3af3265e0f6526f76e160b4&amp;amp;source=constructor" height="527" frameborder="0"> </iframe>
+        </div><img class="contact_card" src="./images/contact_card.png" alt="">
       </div>
     </div>
     <footer class="footer"> 
