--- a/html/journal.html
+++ b/html/journal.html
@@ -62,44 +62,65 @@
         </div>
       </div>
     </header>
-    <div id="reference"> 
+    <div id="journal"> 
             <section id="home_2">
-              <div class="main_container last_home_wrapper">
+              <div class="main_container contact_home_wrapper">
                 <ul class="breadcrumbs d-flex align-items-center gap-2">
                   <li> <a href="/">Главная</a></li>
                   <li><span>></span></li>
-                  <li><span>Справка</span></li>
+                  <li><span>Журнал</span></li>
                 </ul>
                 <div class="home_wrapper">
                   <div class="home_left">
-                    <div class="title">Что делать после ДТП?</div>
-                    <div class="description">Здесь вы найдете ответы на наиболее часто задаваемые вопросы по всему, что связано с ДТП, автострахованием, возмещение убытков от ДТП, обжалование автоштрафов и прочие вопросы. Раздел дополняется.
+                    <div class="title">Журнал</div>
+                    <div class="description">Уникальный проект не имеющий аналогов в России. Ведем позновательный журнал о жизни на дорогах Калининграда. Разбираем ситуации, даём советы, констатируем факты.
                     </div>
                   </div>
-                  <div class="home_img"><img src="./images/reference_home_bg.png" alt=""></div>
+                  <div class="home_img"><img src="./images/journal_home_bg.png" alt=""></div>
                 </div>
                 <div class="bg_number">
                    50-50-50</div>
               </div>
             </section>
-      <div class="main_container"> 
-        <ul class="links d-flex flex-column">
-          <li> <a href="#">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 Правил ДД, он обязан... </a></li>
-          <li> <a href="#">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия </a></li>
-          <li> <a href="#">Каковы самые распространённые ошибки при оформении ДТП </a></li>
-          <li> <a href="#">Что делать, если вы попали в аварию на арендованном автомобиле </a></li>
-          <li> <a href="#">Что входит в перечень обязанностей аварийного комиссара</a></li>
-        </ul>
-        <div class="main_title">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 <br> Правил ДД, он обязан...</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Каковы самые распространённые ошибки при оформении ДТП</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что делать, если вы попали в аварию на арендованном автомобиле</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что входит в перечень обязанностей аварийного комиссара</div>
-        <div class="main_description last_main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
+      <div class="main_container">
+        <div class="journal_cards d-flex flex-wrap align-items-start">
+          <div class="card_item"> <img src="./images/journal_card.png" alt="">
+            <div class="card_item_body"> 
+              <div class="date">20.11.2020</div>
+              <div class="card_description">Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в Калининграде о порядке.</div>
+            </div>
+          </div>
+          <div class="card_item"> <img src="./images/journal_card.png" alt="">
+            <div class="card_item_body"> 
+              <div class="date">20.11.2020</div>
+              <div class="card_description">Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в</div>
+            </div>
+          </div>
+          <div class="card_item"> <img src="./images/journal_card.png" alt="">
+            <div class="card_item_body"> 
+              <div class="date">20.11.2020</div>
+              <div class="card_description">Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в</div>
+            </div>
+          </div>
+          <div class="card_item"> <img src="./images/journal_card.png" alt="">
+            <div class="card_item_body"> 
+              <div class="date">20.11.2020</div>
+              <div class="card_description">Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в Калининграде о порядке.</div>
+            </div>
+          </div>
+          <div class="card_item"> <img src="./images/journal_card.png" alt="">
+            <div class="card_item_body"> 
+              <div class="date">20.11.2020</div>
+              <div class="card_description">Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в</div>
+            </div>
+          </div>
+          <div class="card_item"> <img src="./images/journal_card.png" alt="">
+            <div class="card_item_body"> 
+              <div class="date">20.11.2020</div>
+              <div class="card_description">Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в</div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <footer class="footer"> 
