--- a/html/price.html
+++ b/html/price.html
@@ -62,44 +62,78 @@
         </div>
       </div>
     </header>
-    <div id="reference"> 
+    <div id="price"> 
             <section id="home_2">
-              <div class="main_container last_home_wrapper">
+              <div class="main_container price_home_wrapper">
                 <ul class="breadcrumbs d-flex align-items-center gap-2">
                   <li> <a href="/">Главная</a></li>
                   <li><span>></span></li>
-                  <li><span>Справка</span></li>
+                  <li><span>Услуги и цены</span></li>
                 </ul>
                 <div class="home_wrapper">
                   <div class="home_left">
-                    <div class="title">Что делать после ДТП?</div>
-                    <div class="description">Здесь вы найдете ответы на наиболее часто задаваемые вопросы по всему, что связано с ДТП, автострахованием, возмещение убытков от ДТП, обжалование автоштрафов и прочие вопросы. Раздел дополняется.
+                    <div class="title">Выезд аварийного комиссара на место ДТП</div>
+                    <div class="description">Служба «50-50-50» предлагает полный комплекс услуг по оформлению и сопровождению страховых случаев после дорожно-транспортных происшествий. Мы гарантируем качественное 
                     </div>
                   </div>
-                  <div class="home_img"><img src="./images/reference_home_bg.png" alt=""></div>
+                  <div class="home_img"><img src="./images/price_home_bg.png" alt=""></div>
                 </div>
                 <div class="bg_number">
                    50-50-50</div>
               </div>
             </section>
-      <div class="main_container"> 
-        <ul class="links d-flex flex-column">
-          <li> <a href="#">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 Правил ДД, он обязан... </a></li>
-          <li> <a href="#">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия </a></li>
-          <li> <a href="#">Каковы самые распространённые ошибки при оформении ДТП </a></li>
-          <li> <a href="#">Что делать, если вы попали в аварию на арендованном автомобиле </a></li>
-          <li> <a href="#">Что входит в перечень обязанностей аварийного комиссара</a></li>
-        </ul>
-        <div class="main_title">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 <br> Правил ДД, он обязан...</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Каковы самые распространённые ошибки при оформении ДТП</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что делать, если вы попали в аварию на арендованном автомобиле</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что входит в перечень обязанностей аварийного комиссара</div>
-        <div class="main_description last_main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
+      <div class="main_container text_wrapper d-flex align-items-start">
+        <div class="text_left">
+          <div class="description">Товарищи! сложившаяся структура организации требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Таким образом укрепление и развитие структуры требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач.<br><br>Равным образом консультация с широким активом требуют определения и уточнения существенных финансовых и административных условий. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Таким образом реализация намеченных плановых заданий требуют от нас анализа направлений прогрессивного развития.
+            <div class="main_title">Стиль и размер h2-заголовка</div>
+            <div class="description">Идейные соображения высшего порядка, а также сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий.</div>
+            <div class="main_title_2">Стиль и размер h3-заголовка</div>
+            <div class="description">Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.</div>
+            <div class="description title">Стиль маркированного списка:</div>
+            <ul> 
+              <li>—  Значимость этих проблем настолько очевидна</li>
+              <li>—  Разнообразный и богатый опыт</li>
+              <li>—  Ссоответствует насущным потребностям</li>
+            </ul>
+            <div class="description title">Стиль нумерованного списка:</div>
+            <ol>
+              <li>Значимость этих проблем настолько очевидна</li>
+              <li>Разнообразный и богатый опыт</li>
+              <li>Ссоответствует насущным потребностям</li>
+            </ol>
+            <div class="description last">Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.</div>
+          </div>
+        </div>
+        <div class="text_right">
+          <div class="data_list">
+            <div class="datas d-flex align-items-center justify-content-between">
+              <div class="data_name">Выезд на место ДТП и первичная консультация</div>
+              <div class="data_value free">Бесплатно</div>
+            </div>
+            <div class="datas d-flex align-items-center justify-content-between">
+              <div class="data_name">Эвакуация Вашего авто для клиентов нашего автосервиса</div>
+              <div class="data_value">Бесплатно</div>
+            </div>
+            <div class="datas d-flex align-items-center justify-content-between">
+              <div class="data_name">Оформление Европротокола</div>
+              <div class="data_value">1 000 руб.</div>
+            </div>
+            <div class="datas d-flex align-items-center justify-content-between">
+              <div class="data_name">Оформление документов для ГИБДД</div>
+              <div class="data_value">2 000 руб.</div>
+            </div>
+          </div>
+          <div class="main_title_2">Другие наши услуги</div>
+          <ul class="links"> 
+            <li> <a href="#">Фото и видеофиксация ДТП </a></li>
+            <li> <a href="#">Консультация и оформление ДТП </a></li>
+            <li> <a href="#">Эвакуация авто с места ДТП </a></li>
+            <li> <a href="#">Подготовка документов для обращения в страховую компанию </a></li>
+            <li> <a href="#">Юридическое сопровождение по последствиям ДТП </a></li>
+            <li> <a href="#">Независимая экспертиза повреждений автомобиля </a></li>
+            <li> <a href="#">Ремонт автомобиля после ДТП </a></li>
+          </ul>
+        </div>
       </div>
     </div>
     <footer class="footer"> 
