--- a/html/prices.html
+++ b/html/prices.html
@@ -62,44 +62,75 @@
         </div>
       </div>
     </header>
-    <div id="reference"> 
+    <div id="prices"> 
             <section id="home_2">
-              <div class="main_container last_home_wrapper">
+              <div class="main_container prices_home_wrapper">
                 <ul class="breadcrumbs d-flex align-items-center gap-2">
                   <li> <a href="/">Главная</a></li>
                   <li><span>></span></li>
-                  <li><span>Справка</span></li>
+                  <li><span>Услуги и цены</span></li>
                 </ul>
                 <div class="home_wrapper">
                   <div class="home_left">
-                    <div class="title">Что делать после ДТП?</div>
-                    <div class="description">Здесь вы найдете ответы на наиболее часто задаваемые вопросы по всему, что связано с ДТП, автострахованием, возмещение убытков от ДТП, обжалование автоштрафов и прочие вопросы. Раздел дополняется.
+                    <div class="title">Услуги и цены</div>
+                    <div class="description">Служба «50-50-50» предлагает полный комплекс услуг по оформлению и сопровождению страховых случаев после дорожно-транспортных происшествий. Мы гарантируем качественное и оперативное выполнение всех работ, что позволит Вам сэкономить время и силы.
                     </div>
                   </div>
-                  <div class="home_img"><img src="./images/reference_home_bg.png" alt=""></div>
+                  <div class="home_img"><img src="./images/prices_home_bg.png" alt=""></div>
                 </div>
                 <div class="bg_number">
                    50-50-50</div>
               </div>
             </section>
-      <div class="main_container"> 
-        <ul class="links d-flex flex-column">
-          <li> <a href="#">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 Правил ДД, он обязан... </a></li>
-          <li> <a href="#">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия </a></li>
-          <li> <a href="#">Каковы самые распространённые ошибки при оформении ДТП </a></li>
-          <li> <a href="#">Что делать, если вы попали в аварию на арендованном автомобиле </a></li>
-          <li> <a href="#">Что входит в перечень обязанностей аварийного комиссара</a></li>
-        </ul>
-        <div class="main_title">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 <br> Правил ДД, он обязан...</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Каковы самые распространённые ошибки при оформении ДТП</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что делать, если вы попали в аварию на арендованном автомобиле</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что входит в перечень обязанностей аварийного комиссара</div>
-        <div class="main_description last_main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
+      <div class="main_container cards d-flex flex-wrap align-items-start">
+        <div class="card_item"> <img class="card_img" src="./images/prices_card_1.png" alt="">
+          <div class="card_text"> 
+            <div class="text_title">Выезд аварийного комиссара <br> на место ДТП</div>
+            <div class="text_subtitle">Бесплатно</div>
+          </div>
+        </div>
+        <div class="card_item"> <img class="card_img" src="./images/prices_card_2.png" alt="">
+          <div class="card_text"> 
+            <div class="text_title">Фото и видеофиксация места ДТП</div>
+            <div class="text_subtitle">Бесплатно при заказе оформления</div>
+          </div>
+        </div>
+        <div class="card_item"> <img class="card_img" src="./images/prices_card_3.png" alt="">
+          <div class="card_text"> 
+            <div class="text_title">Консультация и оформление ДТП</div>
+            <div class="text_subtitle">900 рублей</div>
+          </div>
+        </div>
+        <div class="card_item"> <img class="card_img" src="./images/prices_card_4.png" alt="">
+          <div class="card_text"> 
+            <div class="text_title">Эвакуация авто с места ДТП</div>
+            <div class="text_subtitle">Бесплатно</div>
+          </div>
+        </div>
+        <div class="card_item"> <img class="card_img" src="./images/prices_card_5.png" alt="">
+          <div class="card_text"> 
+            <div class="text_title">Подготовка документов для обращения в страховую компанию</div>
+            <div class="text_subtitle">От  1 000 рублей</div>
+          </div>
+        </div>
+        <div class="card_item"> <img class="card_img" src="./images/prices_card_6.png" alt="">
+          <div class="card_text"> 
+            <div class="text_title">Юридическое сопровождение по последствиям ДТП</div>
+            <div class="text_subtitle">От  1 000 рублей</div>
+          </div>
+        </div>
+        <div class="card_item"> <img class="card_img" src="./images/prices_card_7.png" alt="">
+          <div class="card_text"> 
+            <div class="text_title">Независимая экспертиза повреждений автомобиля</div>
+            <div class="text_subtitle">От 4 000 рублей</div>
+          </div>
+        </div>
+        <div class="card_item"> <img class="card_img" src="./images/prices_card_8.png" alt="">
+          <div class="card_text"> 
+            <div class="text_title">Ремонт автомобиля после ДТП</div>
+            <div class="text_subtitle">В зависимости от повреждений</div>
+          </div>
+        </div>
       </div>
     </div>
     <footer class="footer"> 
