--- a/html/rates.html
+++ b/html/rates.html
@@ -62,44 +62,81 @@
         </div>
       </div>
     </header>
-    <div id="reference"> 
+    <div id="rates"> 
             <section id="home_2">
-              <div class="main_container last_home_wrapper">
+              <div class="main_container rates_home_wrapper">
                 <ul class="breadcrumbs d-flex align-items-center gap-2">
                   <li> <a href="/">Главная</a></li>
                   <li><span>></span></li>
-                  <li><span>Справка</span></li>
+                  <li><span>Тарифы</span></li>
                 </ul>
                 <div class="home_wrapper">
                   <div class="home_left">
-                    <div class="title">Что делать после ДТП?</div>
-                    <div class="description">Здесь вы найдете ответы на наиболее часто задаваемые вопросы по всему, что связано с ДТП, автострахованием, возмещение убытков от ДТП, обжалование автоштрафов и прочие вопросы. Раздел дополняется.
+                    <div class="title">Тарифы</div>
+                    <div class="description">Представляем Вашему вниманию базовые тарифы на услуги аварийного комиссара в Калининграде. Здесь вы найдёте три варианта оказания услуги Каждую из которых можно заказать позвонив по телефону.
                     </div>
                   </div>
-                  <div class="home_img"><img src="./images/reference_home_bg.png" alt=""></div>
+                  <div class="home_img"><img src="./images/rates_home_bg.png" alt=""></div>
                 </div>
                 <div class="bg_number">
                    50-50-50</div>
               </div>
             </section>
-      <div class="main_container"> 
-        <ul class="links d-flex flex-column">
-          <li> <a href="#">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 Правил ДД, он обязан... </a></li>
-          <li> <a href="#">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия </a></li>
-          <li> <a href="#">Каковы самые распространённые ошибки при оформении ДТП </a></li>
-          <li> <a href="#">Что делать, если вы попали в аварию на арендованном автомобиле </a></li>
-          <li> <a href="#">Что входит в перечень обязанностей аварийного комиссара</a></li>
-        </ul>
-        <div class="main_title">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 <br> Правил ДД, он обязан...</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Каковы самые распространённые ошибки при оформении ДТП</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что делать, если вы попали в аварию на арендованном автомобиле</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что входит в перечень обязанностей аварийного комиссара</div>
-        <div class="main_description last_main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
+      <div class="main_container cards d-flex flex-wrap align-items-start"> 
+        <div class="card_item"> 
+          <div class="card_content">
+            <div class="card_title">Минимум</div>
+            <div class="card_subtitle">Только оформление</div>
+            <ul class="sucsess"> 
+              <li> <img src="./images/success_icon.svg" alt=""><span>Выезд на место ДТП</span></li>
+              <li> <img src="./images/success_icon.svg" alt=""><span>Фото и видеофиксация ДТП</span></li>
+              <li> <img src="./images/success_icon.svg" alt=""><span>Консультация и оформление ДТП</span></li>
+              <li class="title title_1">Только европротокол:</li>
+              <li>900 рублей — город</li>
+              <li>2000 рублей — область</li>
+              <li class="title">Оформление для ГИБДД:</li>
+              <li>2000 рублей — город</li>
+              <li>2000 рублей — область</li>
+            </ul><a class="link" href="#"> <img src="./images/card_phone_icon.svg" alt=""><span>50-50-50</span></a>
+          </div>
+        </div>
+        <div class="card_item"> 
+          <div class="card_content">
+            <div class="card_title">Стандарт</div>
+            <div class="card_subtitle">Только оформление и эвакуация</div>
+            <ul class="sucsess"> 
+              <li> <img src="./images/success_icon.svg" alt=""><span>Выезд на место ДТП</span></li>
+              <li> <img src="./images/success_icon.svg" alt=""><span>Фото и видеофиксация ДТП</span></li>
+              <li> <img src="./images/success_icon.svg" alt=""><span>Консультация и оформление ДТП</span></li>
+              <li class="title_1"> <img src="./images/success_icon.svg" alt=""><span>Эвакуация авто с места ДТП в пределах города</span></li>
+              <li>Тариф «Минимум»</li>
+              <li>+</li>
+              <li class="title_2">Эвакуация без договора:</li>
+              <li>4500 рублей — город</li>
+              <li class="title_3">5000 рублей — область</li>
+              <li>Эвакуация с договором – бесплатно</li>
+            </ul><a class="link" href="#"> <img src="./images/card_phone_icon.svg" alt=""><span>50-50-50</span></a>
+          </div>
+        </div>
+        <div class="card_item"> 
+          <div class="card_content">
+            <div class="card_alert">Самый выгодный</div>
+            <div class="card_title">Максимум</div>
+            <div class="card_subtitle">Подразумевает комплексную помощь и заключение договора</div>
+            <ul class="sucsess"> 
+              <li> <img src="./images/success_icon.svg" alt=""><span>Выезд на место ДТП</span></li>
+              <li> <img src="./images/success_icon.svg" alt=""><span>Фото и видеофиксация ДТП</span></li>
+              <li> <img src="./images/success_icon.svg" alt=""><span>Консультация и оформление ДТП</span></li>
+              <li> <img src="./images/success_icon.svg" alt=""><span>Эвакуация авто с места ДТП для клиентов нашего сервиса</span></li>
+              <li> <img src="./images/success_icon.svg" alt=""><span>Подготовка документов для обращения в страховую компанию</span></li>
+              <li> <img src="./images/success_icon.svg" alt=""><span>Юридическое сопровождение по последствиям ДТП</span></li>
+              <li> <img src="./images/success_icon.svg" alt=""><span>Независимая экспертиза повреждений автомобиля</span></li>
+              <li class="title_3"> <img src="./images/success_icon.svg" alt=""><span>Ремонт автомобиля после ДТП *</span></li>
+              <li>От 4 900 рублей</li>
+            </ul><a class="link" href="#"> <img src="./images/card_phone_icon.svg" alt=""><span>50-50-50</span></a>
+          </div>
+        </div>
+        <div class="card_number">50-50-50</div>
       </div>
     </div>
     <footer class="footer"> 
