--- a/html/examples.html
+++ b/html/examples.html
@@ -62,44 +62,120 @@
         </div>
       </div>
     </header>
-    <div id="reference"> 
+    <div id="examples"> 
             <section id="home_2">
-              <div class="main_container last_home_wrapper">
+              <div class="main_container examples_home_wrapper">
                 <ul class="breadcrumbs d-flex align-items-center gap-2">
                   <li> <a href="/">Главная</a></li>
                   <li><span>></span></li>
-                  <li><span>Справка</span></li>
+                  <li><span>Примеры</span></li>
                 </ul>
                 <div class="home_wrapper">
                   <div class="home_left">
-                    <div class="title">Что делать после ДТП?</div>
-                    <div class="description">Здесь вы найдете ответы на наиболее часто задаваемые вопросы по всему, что связано с ДТП, автострахованием, возмещение убытков от ДТП, обжалование автоштрафов и прочие вопросы. Раздел дополняется.
+                    <div class="title">Примеры</div>
+                    <div class="description">Здесь вы найдете примеры работы наших комиссаров, а также примеры восстановления авто после ДТП в нашем собственном автосервисе.
                     </div>
                   </div>
-                  <div class="home_img"><img src="./images/reference_home_bg.png" alt=""></div>
+                  <div class="home_img"><img src="./images/examples_home_bg.png" alt=""></div>
                 </div>
                 <div class="bg_number">
                    50-50-50</div>
               </div>
             </section>
-      <div class="main_container"> 
-        <ul class="links d-flex flex-column">
-          <li> <a href="#">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 Правил ДД, он обязан... </a></li>
-          <li> <a href="#">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия </a></li>
-          <li> <a href="#">Каковы самые распространённые ошибки при оформении ДТП </a></li>
-          <li> <a href="#">Что делать, если вы попали в аварию на арендованном автомобиле </a></li>
-          <li> <a href="#">Что входит в перечень обязанностей аварийного комиссара</a></li>
-        </ul>
-        <div class="main_title">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 <br> Правил ДД, он обязан...</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Каковы самые распространённые ошибки при оформении ДТП</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что делать, если вы попали в аварию на арендованном автомобиле</div>
-        <div class="main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
-        <div class="main_title">Что входит в перечень обязанностей аварийного комиссара</div>
-        <div class="main_description last_main_description">Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.</div>
+      <div class="main_container example_main_container">
+        <div class="tab d-flex justify-content-center align-items-center"><a class="active" href="#">Работа аваркомов</a><a href="#">Ремонт после ДТП </a></div>
+        <div class="swiper card_1"> 
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="card_content"> <img src="./images/example_slide_1.png" alt="">
+                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card_content"> <img src="./images/example_slide_1.png" alt="">
+                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card_content"> <img src="./images/example_slide_1.png" alt="">
+                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card_content"> <img src="./images/example_slide_1.png" alt="">
+                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card_content"> <img src="./images/example_slide_1.png" alt="">
+                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card_content"> <img src="./images/example_slide_1.png" alt="">
+                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="example_card_1_pagination"></div>
+        <div class="main_title">Примеры восстановления авто после ДТП</div>
+        <div class="main_description">
+           База наших комиссаров – это территория нашего же автосервиса с мощных кузовным цехом. Причем авторемонт не придаток Службы, успешное автономное предприятие, в котором мы обслуживаем и клиентов «50-50-50». Конечно, ремонт после ДТП в нашем сервсие только по Вашему желанию.</div>
+        <div class="card_wrapper d-flex flex-wrap">
+          <div class="card_item"> 
+            <div class="swiper card_2">
+              <div class="swiper-wrapper"> 
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+              </div>
+            </div>
+            <div class="example_card_2_pagination"> </div>
+            <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.Часто нам приходится выезжать в тихие дворы и оформлять</div>
+          </div>
+          <div class="card_item"> 
+            <div class="swiper card_2">
+              <div class="swiper-wrapper"> 
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+              </div>
+            </div>
+            <div class="example_card_2_pagination"> </div>
+            <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.Часто нам приходится выезжать в тихие дворы и оформлять</div>
+          </div>
+          <div class="card_item"> 
+            <div class="swiper card_2">
+              <div class="swiper-wrapper"> 
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+              </div>
+            </div>
+            <div class="example_card_2_pagination"> </div>
+            <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.Часто нам приходится выезжать в тихие дворы и оформлять</div>
+          </div>
+          <div class="card_item"> 
+            <div class="swiper card_2">
+              <div class="swiper-wrapper"> 
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+                <div class="swiper-slide"> <img src="./images/example_slide_2.png" alt=""></div>
+              </div>
+            </div>
+            <div class="example_card_2_pagination"> </div>
+            <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.Часто нам приходится выезжать в тихие дворы и оформлять</div>
+          </div>
+        </div>
       </div>
     </div>
     <footer class="footer"> 
